--- a/task1.html
+++ b/task1.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <center><h1>Reshma</h1></center>
+        <center><h1>Reshma Sri</h1></center>
         <pre>  Mobile:9999999999
   mail:reshmasrim@gmail.com
         </pre> <hr>
